--- a/.github/workflows/llvmlite_conda_builder.yml
+++ b/.github/workflows/llvmlite_conda_builder.yml
@@ -69,6 +69,8 @@ jobs:
     needs: check
     name: ${{ matrix.platform }}-py${{ matrix.python-version }}-build
     runs-on: ${{ matrix.runner }}
+    env:
+      EXTRA_CHANNELS: ${{ matrix.python-version == '3.14' && '-c adtesting/label/py314' || '' }}
     defaults:
       run:
         shell: bash -elx {0}
@@ -107,8 +109,6 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build llvmlite conda package
-        env:
-          ANACONDA_ROCKET_ENABLE_PY314: ${{ matrix.python-version == '3.14' && 'yes' || '' }}
         run: |
           if [ "${{ inputs.llvmdev_run_id }}" != "" ]; then
               LLVMDEV_CHANNEL="file:///${{ github.workspace }}/llvmdev_conda_packages"
@@ -117,7 +117,7 @@ jobs:
           fi
           CONDA_CHANNEL_DIR="conda_channel_dir"
           mkdir $CONDA_CHANNEL_DIR
-          conda build --debug -c "$LLVMDEV_CHANNEL" -c defaults --python=${{ matrix.python-version }} conda-recipes/llvmlite --output-folder=$CONDA_CHANNEL_DIR --no-test
+          conda build --debug -c "$LLVMDEV_CHANNEL" $EXTRA_CHANNELS -c defaults --python=${{ matrix.python-version }} conda-recipes/llvmlite --output-folder=$CONDA_CHANNEL_DIR --no-test
 
       - name: Upload llvmlite conda package
         uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
@@ -135,6 +135,8 @@ jobs:
     name: ${{ matrix.platform }}-py${{ matrix.python-version }}-test
     needs: [check, build]
     runs-on: ${{ matrix.runner }}
+    env:
+      EXTRA_CHANNELS: ${{ matrix.python-version == '3.14' && '-c adtesting/label/py314' || '' }}
     defaults:
       run:
         shell: bash -elx {0}
@@ -155,6 +157,4 @@ jobs:
         run: conda install conda-build
 
       - name: Run tests
-        env:
-          ANACONDA_ROCKET_ENABLE_PY314: ${{ matrix.python-version == '3.14' && 'yes' || '' }}
-        run: conda build --test ${{ matrix.platform }}/llvmlite*.conda
+        run: conda build --test $EXTRA_CHANNELS ${{ matrix.platform }}/llvmlite*.conda
