--- a/.github/workflows/llvmlite_osx-arm64_wheel_builder.yml
+++ b/.github/workflows/llvmlite_osx-arm64_wheel_builder.yml
@@ -47,15 +47,15 @@ jobs:
       - name: Setup Miniconda
         uses: conda-incubator/setup-miniconda@835234971496cad1653abb28a638a281cf32541f # v3.2.0
         with:
-          python-version: ${{ matrix.python-version != '3.14' && matrix.python-version || '3.12' }}
           conda-remove-defaults: true
           auto-update-conda: true
           auto-activate-base: true
 
-      - name: Install Python 3.14
-        if: matrix.python-version == '3.14'
-        run: |
-          conda install -c ad-testing/label/py314 -c defaults python=${{ matrix.python-version }} -y
+      - name: Setup Python
+        uses: actions/setup-python@e797f83bcb11b83ae66e0230d6156d7c80228e7c # v6.0.0
+        with:
+          python-version: ${{ matrix.python-version }}
+          allow-prereleases: true
 
       - name: Download llvmdev Artifact
         if: ${{ inputs.llvmdev_run_id != '' }}
