--- a/.github/workflows/llvmlite_linux-aarch64_wheel_builder.yml
+++ b/.github/workflows/llvmlite_linux-aarch64_wheel_builder.yml
@@ -171,6 +171,7 @@ jobs:
         uses: actions/setup-python@e797f83bcb11b83ae66e0230d6156d7c80228e7c # v6.0.0
         with:
           python-version: ${{ matrix.python-version }}
+          allow-prereleases: true
 
       - name: Download llvmlite wheel
         uses: actions/download-artifact@634f93cb2916e3fdff6788551b99b062d0335ce0 # v5.0.0
@@ -201,8 +202,14 @@ jobs:
             exit 1
           fi
 
-          echo "Installing lief for distribution testing"
-          "${PYTHON_PATH}" -m pip install -v lief
+          # Skip lief installation for Python 3.14 as it fails to build/install
+          # This condition can be removed once lief supports Python 3.14
+          if [ "${{ matrix.python-version }}" != "3.14" ]; then
+            echo "Installing lief for distribution testing"
+            python -m pip install -v lief
+          else
+            echo "skipping lief installation for Python 3.14"
+          fi
 
           echo "Using wheel: $whl"
           "${PYTHON_PATH}" -m pip install -v "$whl"
