--- a/.github/workflows/llvmlite_conda_builder.yml
+++ b/.github/workflows/llvmlite_conda_builder.yml
@@ -111,8 +111,12 @@ jobs:
           fi
           CONDA_CHANNEL_DIR="conda_channel_dir"
           mkdir $CONDA_CHANNEL_DIR
-          # shellcheck disable=SC2086
-          conda build --debug -c "$LLVMDEV_CHANNEL" ${EXTRA_CHANNELS} -c defaults --python=${{ matrix.python-version }} conda-recipes/llvmlite --output-folder="${CONDA_CHANNEL_DIR}" --no-test
+          if [ -n "${EXTRA_CHANNELS}" ]; then
+            extra_args=("${EXTRA_CHANNELS}")
+          else
+            extra_args=()
+          fi
+          conda build --debug -c "${LLVMDEV_CHANNEL}" "${extra_args[@]}" -c defaults --python=${{ matrix.python-version }} conda-recipes/llvmlite --output-folder="${CONDA_CHANNEL_DIR}" --no-test
 
       - name: Upload llvmlite conda package
         uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
@@ -153,5 +157,9 @@ jobs:
 
       - name: Run tests
         run: |
-          # shellcheck disable=SC2086
-          conda build --test ${EXTRA_CHANNELS} ${{ matrix.platform }}/llvmlite*.conda
+          if [ -n "${EXTRA_CHANNELS}" ]; then
+            extra_args=("${EXTRA_CHANNELS}")
+          else
+            extra_args=()
+          fi
+          conda build --test "${extra_args[@]}" "${{ matrix.platform }}"/llvmlite*.conda
