--- a/.github/workflows/llvmdev_build.yml
+++ b/.github/workflows/llvmdev_build.yml
@@ -22,6 +22,7 @@ on:
           - linux-aarch64
           - osx-arm64
           - win-64
+          - windows-11-arm
       recipe:
         description: Recipe to build
         default: all
