--- a/.github/workflows/llvmlite_wheels.yml
+++ b/.github/workflows/llvmlite_wheels.yml
@@ -73,14 +73,6 @@ jobs:
         with:
           python-version: '3.12'
 
-      - name: Set up Miniconda
-        if: matrix.cibw_platform != 'linux'
-        uses: conda-incubator/setup-miniconda@835234971496cad1653abb28a638a281cf32541f # v3.2.0
-        with:
-          conda-remove-defaults: true
-          auto-update-conda: true
-          auto-activate-base: true
-
       - name: Install cibuildwheel
         run: python -m pip install cibuildwheel
 
@@ -90,22 +82,39 @@ jobs:
           CIBW_ARCHS: ${{ matrix.cibw_archs }}
           CIBW_PLATFORM: ${{ matrix.cibw_platform }}
           CIBW_BEFORE_BUILD: |
-            # Install llvmdev dependency
-            if [ "${{ inputs.llvmdev_run_id }}" != "" ]; then
-              if [ "${{ matrix.cibw_platform }}" = "windows" ]; then
-                CHAN="file:///${{ github.workspace }}/llvmdev_conda_packages"
-              else
-                CHAN="file://${{ github.workspace }}/llvmdev_conda_packages"
-              fi
-              conda install -c defaults -c "$CHAN" "llvmdev=${{ env.FALLBACK_LLVMDEV_VERSION }}"
-            else
-              CHAN="${{ env.CONDA_CHANNEL_NUMBA }}"
-              conda install -c defaults "${CHAN}::llvmdev=${{ env.FALLBACK_LLVMDEV_VERSION }}"
-            fi
+            # Install llvmdev dependency (only for Windows and macOS)
+            if [ "${{ matrix.cibw_platform }}" = "windows" ] || [ "${{ matrix.cibw_platform }}" = "macos" ]; then
+              # Install miniconda using existing script
+              bash ${{ github.workspace }}/buildscripts/incremental/install_miniconda.sh
 
-            # Platform-specific additional dependencies
-            if [ "${{ matrix.cibw_platform }}" = "windows" ]; then
-              conda install -c defaults cmake libxml2
+              # Set up conda environment
+              export PATH="$HOME/miniconda3/bin:$PATH"
+              export CONDA_PREFIX="$HOME/miniconda3"
+
+              # Initialize conda
+              conda init bash
+              source ~/.bashrc || true
+
+              if [ "${{ inputs.llvmdev_run_id }}" != "" ]; then
+                if [ "${{ matrix.cibw_platform }}" = "windows" ]; then
+                  CHAN="file:///${{ github.workspace }}/llvmdev_conda_packages"
+                else
+                  CHAN="file://${{ github.workspace }}/llvmdev_conda_packages"
+                fi
+                conda install -c defaults -c "$CHAN" "llvmdev=${{ env.FALLBACK_LLVMDEV_VERSION }}"
+              else
+                CHAN="${{ env.CONDA_CHANNEL_NUMBA }}"
+                conda install -c defaults "${CHAN}::llvmdev=${{ env.FALLBACK_LLVMDEV_VERSION }}"
+              fi
+
+              # Platform-specific additional dependencies
+              if [ "${{ matrix.cibw_platform }}" = "windows" ]; then
+                conda install -c defaults cmake libxml2
+              elif [ "${{ matrix.cibw_platform }}" = "macos" ]; then
+                # Hide libunwind to prevent linking issues
+                mkdir -p "$CONDA_PREFIX/lib/hide_unwind"
+                mv "$CONDA_PREFIX/lib/libunwind"*.dylib "$CONDA_PREFIX/lib/hide_unwind/" 2>/dev/null || true
+              fi
             fi
 
           CIBW_REPAIR_WHEEL_COMMAND: |
