--- a/.github/workflows/llvmlite_wheels.yml
+++ b/.github/workflows/llvmlite_wheels.yml
@@ -30,27 +30,71 @@ env:
 
 jobs:
   build_wheels:
-    name: Build wheels on ${{ matrix.os }}
+    name: build ${{ matrix.platform_label }} (python ${{ matrix.python-version }})
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         include:
           - os: ubuntu-latest
-            cibw_archs: x86_64
-            cibw_platform: linux
             platform_label: linux-64
+            python-version: "3.10"
+          - os: ubuntu-latest
+            platform_label: linux-64
+            python-version: "3.11"
+          - os: ubuntu-latest
+            platform_label: linux-64
+            python-version: "3.12"
+          - os: ubuntu-latest
+            platform_label: linux-64
+            python-version: "3.13"
+          - os: ubuntu-latest
+            platform_label: linux-64
+            python-version: "3.14"
           - os: ubuntu-24.04-arm
-            cibw_archs: aarch64
-            cibw_platform: linux
             platform_label: linux-aarch64
+            python-version: "3.10"
+          - os: ubuntu-24.04-arm
+            platform_label: linux-aarch64
+            python-version: "3.11"
+          - os: ubuntu-24.04-arm
+            platform_label: linux-aarch64
+            python-version: "3.12"
+          - os: ubuntu-24.04-arm
+            platform_label: linux-aarch64
+            python-version: "3.13"
+          - os: ubuntu-24.04-arm
+            platform_label: linux-aarch64
+            python-version: "3.14"
           - os: windows-2025
-            cibw_archs: x64
-            cibw_platform: windows
             platform_label: win-64
+            python-version: "3.10"
+          - os: windows-2025
+            platform_label: win-64
+            python-version: "3.11"
+          - os: windows-2025
+            platform_label: win-64
+            python-version: "3.12"
+          - os: windows-2025
+            platform_label: win-64
+            python-version: "3.13"
+          - os: windows-2025
+            platform_label: win-64
+            python-version: "3.14"
           - os: macos-14
-            cibw_archs: x86_64,arm64
-            cibw_platform: macos
             platform_label: osx-arm64
+            python-version: "3.10"
+          - os: macos-14
+            platform_label: osx-arm64
+            python-version: "3.11"
+          - os: macos-14
+            platform_label: osx-arm64
+            python-version: "3.12"
+          - os: macos-14
+            platform_label: osx-arm64
+            python-version: "3.13"
+          - os: macos-14
+            platform_label: osx-arm64
+            python-version: "3.14"
 
     steps:
       - name: Checkout
@@ -62,7 +106,7 @@ jobs:
         if: ${{ inputs.llvmdev_run_id != '' }}
         uses: actions/download-artifact@634f93cb2916e3fdff6788551b99b062d0335ce0 # v5.0.0
         with:
-          name: llvmdev_for_wheel_${{ matrix.cibw_platform }}-${{ matrix.cibw_archs }}
+          name: llvmdev_for_wheel_${{ matrix.platform_label }}
           path: llvmdev_conda_packages
           run-id: ${{ inputs.llvmdev_run_id }}
           repository: ${{ github.repository }}
@@ -79,11 +123,16 @@ jobs:
       - name: Build wheels
         env:
           CIBW_BUILD: cp310-* cp311-* cp312-* cp313-* cp314-*
-          CIBW_ARCHS: ${{ matrix.cibw_archs }}
-          CIBW_PLATFORM: ${{ matrix.cibw_platform }}
+          CIBW_SKIP: "pp* *-musllinux_*"
+          CIBW_PRERELEASE_PYTHONS: "1"
+          CIBW_ARCHS_LINUX: "auto"
+          CIBW_ARCHS_MACOS: "auto"
+          CIBW_CONTAINER_ENGINE: "docker"
+          CIBW_BUILD_VERBOSITY: "1"
+
           CIBW_BEFORE_BUILD: |
             # Install llvmdev dependency (only for Windows and macOS)
-            if [ "${{ matrix.cibw_platform }}" = "windows" ] || [ "${{ matrix.cibw_platform }}" = "macos" ]; then
+            if [ "${{ matrix.platform_label }}" = "windows" ] || [ "${{ matrix.platform_label }}" = "macos" ]; then
               # Install miniconda using existing script
               bash ${{ github.workspace }}/buildscripts/incremental/install_miniconda.sh
 
@@ -131,23 +180,59 @@ jobs:
       - name: Upload wheels
         uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
         with:
-          name: llvmlite-wheels-${{ matrix.platform_label }}
+          name: llvmlite-wheels-${{ matrix.platform_label }}-py${{ matrix.python-version }}
           path: wheelhouse/*.whl
           compression-level: 0
           retention-days: ${{ env.ARTIFACT_RETENTION_DAYS }}
           if-no-files-found: error
 
   validate_wheels:
-    name: Validate wheels
+    name: validate ${{ matrix.platform_label }} (python ${{ matrix.python-version }})
     needs: build_wheels
     runs-on: ubuntu-latest
     strategy:
       matrix:
         include:
           - platform_label: linux-64
+            python-version: "3.10"
+          - platform_label: linux-64
+            python-version: "3.11"
+          - platform_label: linux-64
+            python-version: "3.12"
+          - platform_label: linux-64
+            python-version: "3.13"
+          - platform_label: linux-64
+            python-version: "3.14"
           - platform_label: linux-aarch64
+            python-version: "3.10"
+          - platform_label: linux-aarch64
+            python-version: "3.11"
+          - platform_label: linux-aarch64
+            python-version: "3.12"
+          - platform_label: linux-aarch64
+            python-version: "3.13"
+          - platform_label: linux-aarch64
+            python-version: "3.14"
           - platform_label: win-64
+            python-version: "3.10"
+          - platform_label: win-64
+            python-version: "3.11"
+          - platform_label: win-64
+            python-version: "3.12"
+          - platform_label: win-64
+            python-version: "3.13"
+          - platform_label: win-64
+            python-version: "3.14"
           - platform_label: osx-arm64
+            python-version: "3.10"
+          - platform_label: osx-arm64
+            python-version: "3.11"
+          - platform_label: osx-arm64
+            python-version: "3.12"
+          - platform_label: osx-arm64
+            python-version: "3.13"
+          - platform_label: osx-arm64
+            python-version: "3.14"
 
     steps:
       - name: Checkout
@@ -164,7 +249,7 @@ jobs:
       - name: Download wheels
         uses: actions/download-artifact@634f93cb2916e3fdff6788551b99b062d0335ce0 # v5.0.0
         with:
-          name: llvmlite-wheels-${{ matrix.platform_label }}
+          name: llvmlite-wheels-${{ matrix.platform_label }}-py${{ matrix.python-version }}
           path: wheelhouse
 
       - name: Validate wheels
@@ -176,7 +261,7 @@ jobs:
           done
 
   test_wheels:
-    name: Test wheels on ${{ matrix.os }}
+    name: test ${{ matrix.platform_label }} (python ${{ matrix.python-version }})
     needs: build_wheels
     runs-on: ${{ matrix.os }}
     strategy:
@@ -184,12 +269,64 @@ jobs:
         include:
           - os: ubuntu-latest
             platform_label: linux-64
+            python-version: "3.10"
+          - os: ubuntu-latest
+            platform_label: linux-64
+            python-version: "3.11"
+          - os: ubuntu-latest
+            platform_label: linux-64
+            python-version: "3.12"
+          - os: ubuntu-latest
+            platform_label: linux-64
+            python-version: "3.13"
+          - os: ubuntu-latest
+            platform_label: linux-64
+            python-version: "3.14"
           - os: ubuntu-24.04-arm
             platform_label: linux-aarch64
+            python-version: "3.10"
+          - os: ubuntu-24.04-arm
+            platform_label: linux-aarch64
+            python-version: "3.11"
+          - os: ubuntu-24.04-arm
+            platform_label: linux-aarch64
+            python-version: "3.12"
+          - os: ubuntu-24.04-arm
+            platform_label: linux-aarch64
+            python-version: "3.13"
+          - os: ubuntu-24.04-arm
+            platform_label: linux-aarch64
+            python-version: "3.14"
           - os: windows-2025
             platform_label: win-64
+            python-version: "3.10"
+          - os: windows-2025
+            platform_label: win-64
+            python-version: "3.11"
+          - os: windows-2025
+            platform_label: win-64
+            python-version: "3.12"
+          - os: windows-2025
+            platform_label: win-64
+            python-version: "3.13"
+          - os: windows-2025
+            platform_label: win-64
+            python-version: "3.14"
           - os: macos-14
             platform_label: osx-arm64
+            python-version: "3.10"
+          - os: macos-14
+            platform_label: osx-arm64
+            python-version: "3.11"
+          - os: macos-14
+            platform_label: osx-arm64
+            python-version: "3.12"
+          - os: macos-14
+            platform_label: osx-arm64
+            python-version: "3.13"
+          - os: macos-14
+            platform_label: osx-arm64
+            python-version: "3.14"
 
     steps:
       - name: Checkout
@@ -198,12 +335,12 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@e797f83bcb11b83ae66e0230d6156d7c80228e7c # v6.0.0
         with:
-          python-version: '3.12'
+          python-version: ${{ matrix.python-version }}
 
       - name: Download wheels
         uses: actions/download-artifact@634f93cb2916e3fdff6788551b99b062d0335ce0 # v5.0.0
         with:
-          name: llvmlite-wheels-${{ matrix.platform_label }}
+          name: llvmlite-wheels-${{ matrix.platform_label }}-py${{ matrix.python-version }}
           path: wheelhouse
 
       - name: Install and test wheels
@@ -234,9 +371,45 @@ jobs:
       matrix:
         include:
           - platform_label: linux-64
+            python-version: "3.10"
+          - platform_label: linux-64
+            python-version: "3.11"
+          - platform_label: linux-64
+            python-version: "3.12"
+          - platform_label: linux-64
+            python-version: "3.13"
+          - platform_label: linux-64
+            python-version: "3.14"
           - platform_label: linux-aarch64
+            python-version: "3.10"
+          - platform_label: linux-aarch64
+            python-version: "3.11"
+          - platform_label: linux-aarch64
+            python-version: "3.12"
+          - platform_label: linux-aarch64
+            python-version: "3.13"
+          - platform_label: linux-aarch64
+            python-version: "3.14"
           - platform_label: win-64
+            python-version: "3.10"
+          - platform_label: win-64
+            python-version: "3.11"
+          - platform_label: win-64
+            python-version: "3.12"
+          - platform_label: win-64
+            python-version: "3.13"
+          - platform_label: win-64
+            python-version: "3.14"
           - platform_label: osx-arm64
+            python-version: "3.10"
+          - platform_label: osx-arm64
+            python-version: "3.11"
+          - platform_label: osx-arm64
+            python-version: "3.12"
+          - platform_label: osx-arm64
+            python-version: "3.13"
+          - platform_label: osx-arm64
+            python-version: "3.14"
 
     steps:
       - name: Set up Python
@@ -250,7 +423,7 @@ jobs:
       - name: Download wheels
         uses: actions/download-artifact@634f93cb2916e3fdff6788551b99b062d0335ce0 # v5.0.0
         with:
-          name: llvmlite-wheels-${{ matrix.platform_label }}
+          name: llvmlite-wheels-${{ matrix.platform_label }}-py${{ matrix.python-version }}
           path: wheelhouse
 
       - name: Upload wheels to Anaconda Cloud
